--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ p {
     width: auto;
     min-height: 36px;
     margin: 0 auto;
-    padding: 4px 20px 1px 20px;
+    padding: 0 20px;
     border: none;
     font-family: 'Futura';
 
