--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ body {
     background: url(../media/landing_bg.png) center center;
     background-attachment: fixed;
     background-size: cover;
+    padding-bottom: 0;
 }
 
 a {
@@ -154,6 +155,13 @@ a {
 
     width: 200px;
     margin: 30px auto;
+}
+
+.logo-s-footer {
+    display: block;
+
+    width: 200px;
+    margin: 20px auto;
 }
 
 .navigation {
@@ -723,7 +731,7 @@ input[type='file'] {
         right: 0;
     }
     .logo-s {
-        margin: 60px auto;
+        margin: 80px auto;
     }
     .slide {
         padding-top: 80px;     
@@ -734,9 +742,11 @@ input[type='file'] {
     }
 
     .dark-bg {
-        background: url(../media/landing_bg_mobile.png) center center;
-        background-attachment: fixed;
-        background-size: cover;
+        background: #000;
+    }
+
+    .project-item {
+        border-radius: 10px;
     }
 }
 
