--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,6 @@ body {
     background: url(../media/landing_bg.png) center center;
     background-attachment: fixed;
     background-size: cover;
-    padding: 0;
 }
 
 a {
@@ -155,13 +154,6 @@ a {
 
     width: 200px;
     margin: 30px auto;
-}
-
-.logo-s-footer {
-    display: block;
-
-    width: 200px;
-    margin: 20px auto;
 }
 
 .navigation {
@@ -315,16 +307,6 @@ p {
     font-size: 20px;
 }
 
-.button.big {
-    height: 46px;
-    padding: 0 30px;
-    transition: 0.3s;
-}
-
-.button.big:hover {
-    box-shadow: #e93a2a96 0 4px 112px;
-}
-
 .button:hover {
     background-image: linear-gradient(-208deg, #E62B2B 0%, #FD9C1D 100%);
     box-shadow: #0002 0 2px 12px;
@@ -449,7 +431,7 @@ section.gray {
 }
 
 section {
-    padding: 36px 0;
+    padding: 24px 0;
 
     text-align: center;
 }
@@ -741,7 +723,7 @@ input[type='file'] {
         right: 0;
     }
     .logo-s {
-        margin: 80px auto;
+        margin: 60px auto;
     }
     .slide {
         padding-top: 80px;     
@@ -752,11 +734,9 @@ input[type='file'] {
     }
 
     .dark-bg {
-        background: #000;
-    }
-
-    .project-item {
-        border-radius: 10px;
+        background: url(../media/landing_bg_mobile.png) center center;
+        background-attachment: fixed;
+        background-size: cover;
     }
 }
 
