--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ body {
     width: 100%;
     height: 100vh;
     min-height: 600px;
-    padding-top: 80px;
+    padding-top: 100px;
 
     text-align: center;
 
@@ -140,7 +140,7 @@ body {
     background: url(../media/landing_bg.png) center center;
     background-attachment: fixed;
     background-size: cover;
-    padding: 0;
+    padding-bottom: 0;
 }
 
 a {
