--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ body {
     background: url(../media/landing_bg.png) center center;
     background-attachment: fixed;
     background-size: cover;
+    padding: 0;
 }
 
 a {
@@ -154,6 +155,13 @@ a {
 
     width: 200px;
     margin: 30px auto;
+}
+
+.logo-s-footer {
+    display: block;
+
+    width: 200px;
+    margin: 20px auto;
 }
 
 .navigation {
@@ -307,6 +315,16 @@ p {
     font-size: 20px;
 }
 
+.button.big {
+    height: 46px;
+    padding: 0 30px;
+    transition: 0.3s;
+}
+
+.button.big:hover {
+    box-shadow: #e93a2a96 0 4px 112px;
+}
+
 .button:hover {
     background-image: linear-gradient(-208deg, #E62B2B 0%, #FD9C1D 100%);
     box-shadow: #0002 0 2px 12px;
@@ -431,7 +449,7 @@ section.gray {
 }
 
 section {
-    padding: 24px 0;
+    padding: 36px 0;
 
     text-align: center;
 }
@@ -723,7 +741,7 @@ input[type='file'] {
         right: 0;
     }
     .logo-s {
-        margin: 60px auto;
+        margin: 80px auto;
     }
     .slide {
         padding-top: 80px;     
@@ -734,9 +752,11 @@ input[type='file'] {
     }
 
     .dark-bg {
-        background: url(../media/landing_bg_mobile.png) center center;
-        background-attachment: fixed;
-        background-size: cover;
+        background: #000;
+    }
+
+    .project-item {
+        border-radius: 10px;
     }
 }
 
