--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     color: #000;
 
     font-weight: normal;
-    font-family: 'Futura', sans-serif;
+    font-family: 'Futura', Helvetica, Arial, sans-serif;
 }
 
 @font-face {
@@ -301,7 +301,7 @@ p {
     margin: 0 auto;
     padding: 0 20px;
     border: none;
-    font-family: 'Futura';
+    font-family: 'Futura', Helvetica, Arial, sans-serif;
 
     cursor: pointer;
     transition: 0.3s ease;
@@ -449,9 +449,14 @@ section.gray {
 }
 
 section {
-    padding: 36px 0;
+    padding: 76px 0;
 
     text-align: center;
+}
+
+.simply-text {
+    max-width: 650px;
+    margin: 0 auto;
 }
 
 .tetris-block {
@@ -465,7 +470,7 @@ section {
 }
 
 .preference-icon {
-    width: 20%;
+    width: 64px;
     margin: 0 auto;
 
     transition: 0.3s;
@@ -717,6 +722,11 @@ input[type='file'] {
         align-items: center;
         justify-content: center;
     }
+
+    section {
+      padding: 24px 0;
+    }
+
     header h1 {
         font-size: 12vw;
     }
@@ -778,6 +788,9 @@ input[type='file'] {
         width: 0!important;
         margin: 0!important;
         padding: 0!important;
+    }
+    section {
+      padding: 24px 0;
     }
     .logo-s {
         width: 160px;
