Add new contacts, mobile links ux improvement

--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ p {
 }
 
 .contact {
-    margin: 12px 0;
+    margin: 8px 0;
     min-width: 180px;
 }
 
@@ -726,6 +726,14 @@ input[type='file'] {
 
         align-items: center;
         justify-content: center;
+    }
+
+    a {
+        text-decoration: underline;
+    }
+
+    a.button {
+        text-decoration: none;
     }
 
     section {
