--- a/css/case.css
+++ b/css/case.css
@@ -137,7 +137,6 @@ body {
 .grad-bg {
     color: #FFF;
     background-image: linear-gradient(-96deg, #49DE9C 0%, #027F7E 100%);
-    background-attachment: fixed;
 }
 
 a {
@@ -276,6 +275,7 @@ p {
 
 .block {
     /* display: inline-block; */
+    position: relative;
 
     padding: 0 20px;
 
@@ -472,7 +472,9 @@ section.secondary {
 }
 
 section {
+    position: relative;
     padding: 76px 0;
+    max-width: 100%;
 }
 
 .simply-text {
@@ -694,6 +696,147 @@ header h4 {
     height: 420px;
 }
 
+.slider-wrapper {
+    position: relative;
+    overflow: hidden;
+}
+
+.slick-slider {
+    position: relative;
+    margin: 0 -10px;
+}
+
+.slick-slide {
+    vertical-align: top;
+    display: inline-block;
+    margin: 10px;
+    min-height: 100px;
+    border-radius: 16px;
+    overflow: hidden;
+    transition: 0.2s ease;
+    transform: scale(0.95);
+    box-shadow: 0 6px 30px 0 rgba(0,0,0,0.15);
+
+    /* opacity: 0.5; */
+    outline: none;
+}
+
+.slick-slide img {
+    width: 100%;
+}
+
+.slick-center
+{
+    transform: scale(1);
+    box-shadow: 0 16px 60px 0 rgba(0,0,0,0.20);
+
+    /* opacity: 1; */
+}
+
+.slick-prev:before,
+.slick-next:before
+{
+    transition: .3s ease;
+
+    opacity: 0;
+    color: rgba(0, 0, 0, .5);
+}
+
+.slick-prev,
+.slick-next
+{
+    position: absolute;
+    top: 0;
+    z-index: 100;
+    outline: none;
+
+    width: 50%;
+    height: 95%;
+
+    transform: none !important;
+    opacity: 0;
+}
+
+.slick-next
+{
+    right: -50%;
+}
+
+.slick-prev
+{
+    left: -50%;
+}
+
+.bg-decor {
+    position: absolute;
+    width: 100%;
+    min-width: 3240px;
+    height: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#mobile {
+    min-height: 780px;
+}
+
+.img-mask {
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 16px 60px 0 rgba(0,0,0,0.20);
+}
+
+.img-mask img {
+    width: 100%;
+    height: auto;
+}
+
+.infoblock-wrapper {
+    height: 40px;
+}
+
+.infoblock {
+    padding: 20px 30px;
+    z-index: 100;
+    position: relative;
+}
+.phone-wrapper {
+    position: relative;
+    float: right;
+    width: 370px;
+    max-width: 100%;
+}
+.phone {
+    position: relative;
+    width: 100%;
+    padding: 100% 0;
+    height: 0;
+    transform: rotate(12deg);
+    /* transition: 0.3s ease; */
+}
+.phone .screen {
+    position: absolute;
+    top: 12.2%;
+    left: 6.8%;
+    right: 6.8%;
+    bottom: 12.2%;
+}
+.phone iframe {
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+.phone img {
+    pointer-events: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+
 /*small*/
 @media screen and (max-width: 639px) {
     .small-no-padding {
@@ -764,6 +907,28 @@ header h4 {
     .select-wrapper {
         padding: 5px;
     }
+
+    .infoblock-wrapper {
+        height: auto;
+        margin-bottom: 20px;
+    }
+    .phone-wrapper {
+        margin: 0 auto;
+        float: none;
+    }
+
+    .phone {
+      transform: rotate(0deg);
+      margin: 20px 0;
+      float: none;
+    }
+
+    .phone iframe {
+        width: 133.4%;
+        height: 133.4%;
+        transform: scale(0.75);
+        transform-origin: 0 0;
+    }
 }
 
 /*medium*/
@@ -785,9 +950,9 @@ header h4 {
         margin: 0!important;
         padding: 0!important;
     }
-    section {
+    /* section {
       padding: 24px 0;
-    }
+    } */
     .navigation {
         width: auto;
         margin: 10px;
@@ -799,6 +964,14 @@ header h4 {
     .hero-logo {
         right: -40px;
         left: auto;
+    }
+    .infoblock-wrapper {
+        height: auto;
+        margin-bottom: 20px;
+    }
+
+    #mobile .bg-decor {
+        transform: translate(-50%, -38%) scale(0.7);
     }
 }
 
